sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On RETURN shift to state 53
-- On PRINT shift to state 57
-- On INPUTS shift to state 60
-- On INPUTI shift to state 63
-- On INPUTF shift to state 66
-- On INPUTC shift to state 69
-- On IF shift to state 72
-- On ID shift to state 77
-- On FOR shift to state 96
-- On DEF shift to state 151
-- On programa shift to state 176
-- On list(instrucao) shift to state 177
-- On instrucao shift to state 179
-- On funcao shift to state 181
-- On comando_while shift to state 111
-- On comando_se shift to state 112
-- On comando_retorno shift to state 113
-- On comando_print shift to state 114
-- On comando_inputs shift to state 115
-- On comando_inputi shift to state 116
-- On comando_inputf shift to state 117
-- On comando_inputc shift to state 118
-- On comando_for shift to state 119
-- On comando_chamada shift to state 120
-- On comando_atribuicao_sub shift to state 121
-- On comando_atribuicao_mul shift to state 122
-- On comando_atribuicao_mod shift to state 123
-- On comando_atribuicao_mais shift to state 124
-- On comando_atribuicao_div shift to state 125
-- On comando_atribuicao shift to state 126
-- On comando shift to state 182
-- On chamada shift to state 129
-- On EOF reduce production list(instrucao) -> 

State 1:
comando_while -> WHILE . expressao DPTOS NOVALINHA INDENTA comandos DEDENTA [ WHILE RETURN PRINT INPUTS INPUTI INPUTF INPUTC IF ID FOR EOF DEF DEDENTA ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 49
-- On chamada shift to state 17

State 2:
expressao -> NAO . expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 48
-- On chamada shift to state 17

State 3:
expressao -> MENOS . expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 47
-- On chamada shift to state 17

State 4:
expressao -> LITSTRING . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On OULOG reduce production expressao -> LITSTRING 
-- On NOVALINHA reduce production expressao -> LITSTRING 
-- On MUL reduce production expressao -> LITSTRING 
-- On MOD reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On ELOG reduce production expressao -> LITSTRING 
-- On DPTOS reduce production expressao -> LITSTRING 
-- On DIV reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 5:
expressao -> LITINT . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On OULOG reduce production expressao -> LITINT 
-- On NOVALINHA reduce production expressao -> LITINT 
-- On MUL reduce production expressao -> LITINT 
-- On MOD reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On ELOG reduce production expressao -> LITINT 
-- On DPTOS reduce production expressao -> LITINT 
-- On DIV reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 6:
expressao -> LITFLOAT . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITFLOAT 
-- On OULOG reduce production expressao -> LITFLOAT 
-- On NOVALINHA reduce production expressao -> LITFLOAT 
-- On MUL reduce production expressao -> LITFLOAT 
-- On MOD reduce production expressao -> LITFLOAT 
-- On MENOS reduce production expressao -> LITFLOAT 
-- On MENORIGUAL reduce production expressao -> LITFLOAT 
-- On MENOR reduce production expressao -> LITFLOAT 
-- On MAIS reduce production expressao -> LITFLOAT 
-- On MAIORIGUAL reduce production expressao -> LITFLOAT 
-- On MAIOR reduce production expressao -> LITFLOAT 
-- On IGUAL reduce production expressao -> LITFLOAT 
-- On FPAR reduce production expressao -> LITFLOAT 
-- On ELOG reduce production expressao -> LITFLOAT 
-- On DPTOS reduce production expressao -> LITFLOAT 
-- On DIV reduce production expressao -> LITFLOAT 
-- On DIFERENTE reduce production expressao -> LITFLOAT 

State 7:
expressao -> LITCHAR . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITCHAR 
-- On OULOG reduce production expressao -> LITCHAR 
-- On NOVALINHA reduce production expressao -> LITCHAR 
-- On MUL reduce production expressao -> LITCHAR 
-- On MOD reduce production expressao -> LITCHAR 
-- On MENOS reduce production expressao -> LITCHAR 
-- On MENORIGUAL reduce production expressao -> LITCHAR 
-- On MENOR reduce production expressao -> LITCHAR 
-- On MAIS reduce production expressao -> LITCHAR 
-- On MAIORIGUAL reduce production expressao -> LITCHAR 
-- On MAIOR reduce production expressao -> LITCHAR 
-- On IGUAL reduce production expressao -> LITCHAR 
-- On FPAR reduce production expressao -> LITCHAR 
-- On ELOG reduce production expressao -> LITCHAR 
-- On DPTOS reduce production expressao -> LITCHAR 
-- On DIV reduce production expressao -> LITCHAR 
-- On DIFERENTE reduce production expressao -> LITCHAR 

State 8:
expressao -> LITBOOL . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> LITBOOL 
-- On OULOG reduce production expressao -> LITBOOL 
-- On NOVALINHA reduce production expressao -> LITBOOL 
-- On MUL reduce production expressao -> LITBOOL 
-- On MOD reduce production expressao -> LITBOOL 
-- On MENOS reduce production expressao -> LITBOOL 
-- On MENORIGUAL reduce production expressao -> LITBOOL 
-- On MENOR reduce production expressao -> LITBOOL 
-- On MAIS reduce production expressao -> LITBOOL 
-- On MAIORIGUAL reduce production expressao -> LITBOOL 
-- On MAIOR reduce production expressao -> LITBOOL 
-- On IGUAL reduce production expressao -> LITBOOL 
-- On FPAR reduce production expressao -> LITBOOL 
-- On ELOG reduce production expressao -> LITBOOL 
-- On DPTOS reduce production expressao -> LITBOOL 
-- On DIV reduce production expressao -> LITBOOL 
-- On DIFERENTE reduce production expressao -> LITBOOL 

State 9:
chamada -> ID . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> ID . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On APAR shift to state 10
-- On VIRG reduce production expressao -> ID 
-- On OULOG reduce production expressao -> ID 
-- On NOVALINHA reduce production expressao -> ID 
-- On MUL reduce production expressao -> ID 
-- On MOD reduce production expressao -> ID 
-- On MENOS reduce production expressao -> ID 
-- On MENORIGUAL reduce production expressao -> ID 
-- On MENOR reduce production expressao -> ID 
-- On MAIS reduce production expressao -> ID 
-- On MAIORIGUAL reduce production expressao -> ID 
-- On MAIOR reduce production expressao -> ID 
-- On IGUAL reduce production expressao -> ID 
-- On FPAR reduce production expressao -> ID 
-- On ELOG reduce production expressao -> ID 
-- On DPTOS reduce production expressao -> ID 
-- On DIV reduce production expressao -> ID 
-- On DIFERENTE reduce production expressao -> ID 

State 10:
chamada -> ID APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On separated_nonempty_list(VIRG,expressao) shift to state 41
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 42
-- On expressao shift to state 44
-- On chamada shift to state 17
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 

State 11:
expressao -> APAR . expressao FPAR [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 12
-- On chamada shift to state 17

State 12:
expressao -> expressao . ELOG expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . OULOG expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIS expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENOS expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MUL expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIV expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MOD expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . IGUAL expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIOR expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENOR expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ OULOG MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFERENTE ]
expressao -> APAR expressao . FPAR [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On OULOG shift to state 13
-- On MUL shift to state 15
-- On MOD shift to state 18
-- On MENOS shift to state 20
-- On MENORIGUAL shift to state 24
-- On MENOR shift to state 28
-- On MAIS shift to state 26
-- On MAIORIGUAL shift to state 30
-- On MAIOR shift to state 32
-- On IGUAL shift to state 34
-- On FPAR shift to state 40
-- On ELOG shift to state 36
-- On DIV shift to state 22
-- On DIFERENTE shift to state 38

State 13:
expressao -> expressao OULOG . expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 14
-- On chamada shift to state 17

State 14:
expressao -> expressao . ELOG expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . OULOG expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao OULOG expressao . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIS expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENOS expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MUL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . DIV expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MOD expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On MUL shift to state 15
-- On MOD shift to state 18
-- On MENOS shift to state 20
-- On MENORIGUAL shift to state 24
-- On MENOR shift to state 28
-- On MAIS shift to state 26
-- On MAIORIGUAL shift to state 30
-- On MAIOR shift to state 32
-- On IGUAL shift to state 34
-- On ELOG shift to state 36
-- On DIV shift to state 22
-- On DIFERENTE shift to state 38
-- On VIRG reduce production expressao -> expressao OULOG expressao 
-- On OULOG reduce production expressao -> expressao OULOG expressao 
-- On NOVALINHA reduce production expressao -> expressao OULOG expressao 
-- On FPAR reduce production expressao -> expressao OULOG expressao 
-- On DPTOS reduce production expressao -> expressao OULOG expressao 

State 15:
expressao -> expressao MUL . expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On NAO shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITCHAR shift to state 7
-- On LITBOOL shift to state 8
-- On ID shift to state 9
-- On APAR shift to state 11
-- On expressao shift to state 16
-- On chamada shift to state 17

State 16:
expressao -> expressao . ELOG expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . OULOG expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIS expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENOS expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MUL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao MUL expressao . [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . DIV expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MOD expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG OULOG NOVALINHA MUL MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFERENTE ]
-- On VIRG reduce production expressao -> expressao MUL expressao 
-- On OULOG reduce production expressao -> expressao MUL expressao 
-- On NOVALINHA reduce production expressao -> expressao MUL expressao 
-- On MUL reduce production expressao -> expressao MUL expressao 
-- On MOD reduce production expressao -> expressao MUL expressao 
-- On MENOS reduce production expressao -> expressao MUL expressao 
-- On MENORIGUAL reduce production expressao -> expressao MUL expressao 
-- On MENOR reduce production expressao -> expressao MUL expressao 
-- On MAIS reduce production expressao -> expressao MUL expressao 
-- On MAIORIGUAL reduce production expressao -> expressao MUL expressao 
-- On MAIOR reduce production expressao -> expressao MUL expressao 
-- On IGUAL reduce production expressao -> expressao MUL expressao 
-- On FPAR reduce production expressao -> expressao MUL expressao 
-- On ELOG reduce production expressao -> expressao MUL expressao 
-- On DPTOS reduce production expressao -> expressao MUL expressao 
-- On DIV reduce production expressao -> expressao MUL expressao 
-- On DIFERENTE reduce production expressao -> expressao MUL expressao 
